# rOSt

./: .gitignore  CLAUDE.md  Cargo.toml  GUI_PLAN.md  KERNEL_AUDIT_2025-01-07.md  KNOWN_ISSUES.md  MICROKERNEL_MIGRATION.md  Makefile  OSDEV_QUESTION.md  OS_ROADMAP.md  README.md  RUN.md  TCP_TEST.md  XHCI_REAL_IMPLEMENTATION_PLAN.md  aarch64-unknown-none-elf.json  build.rs  debug_freeze.gdb  debug_freeze.lldb  debug_wm.lldb  issues.md  linker.ld  qemu-virt.dtb  reddit_post.md  run_with_debug.sh  rust-toolchain.toml  todo.md
.cargo/: config.toml
.claude/: settings.local.json
docs/: virtio_1.3_spec.md
http_test_files/: css_test.html  div_span_test.html  index.html  modern.css  modern.html  style.css  test.csv
http_test_files/lb/: index.html  style.css
image_codecs/: Cargo.toml
image_codecs/src/: bmp.rs  jpeg.rs  lib.rs  png.rs
kernel/: Cargo.toml  window_manager.elf
kernel/src/: raw_uefi.rs  uefi_boot.rs  vectors.s
kernel/src/apps/: mod.rs  shell.rs
kernel/src/gui/: bmp_decoder.rs  font.rs  framebuffer.rs  mod.rs  window_manager.rs
kernel/src/gui/widgets/: file_explorer.rs  image_viewer.rs  mod.rs  text_input.rs
kernel/src/gui/widgets/browser/: http.rs  layout.rs  mod.rs  render.rs  types.rs
kernel/src/kernel/: dtb.rs  elf_loader.rs  embedded_apps.rs  exception_vector.s  filedesc.rs  interrupts.rs  memory.rs  mod.rs  scheduler.rs  syscall.rs  syscall_ipc.rs  thread.rs  trampoline.s  userspace_test.rs
kernel/src/kernel/drivers/: input_events.rs  input_events.rs.backup
kernel/src/kernel/drivers/virtio/: blk.rs  gpu.rs  mod.rs  net.rs
kernel/src/system/: mod.rs
kernel/src/system/fs/: filesystem.rs
kernel/src/system/net/: helpers.rs  stack.rs
librost/: Cargo.toml
librost/src/: graphics.rs  input.rs  ipc_protocol.rs  lib.rs  sync.rs
librost/src/runtime/: mod.rs  syscalls.rs
src/: allocator.rs  boot.s  device_tree.rs  filesystem.rs  gic.rs  graphics.rs  input.rs  interrupts.rs  main.rs  mmu.rs  mmu_simple.rs  ramfb.rs  scheduler.rs  shell.rs  timer.rs  uart.rs  uefi_boot.rs  uefi_main.rs  vectors.s
src/apps/: shell.rs  snake.rs
src/gui/: bmp_decoder.rs  css_parser.rs  font.rs  framebuffer.rs  html_parser.rs  jpeg_decoder.rs  mod.rs  png_decoder.rs  window_manager.rs
src/gui/widgets/: browser.rs  console.rs  editor.rs  file_explorer.rs  image_viewer.rs  mod.rs  text_input.rs
src/gui/widgets/browser/: layout.rs  mod.rs  navigation.rs  render.rs  types.rs  utils.rs
src/kernel/: browser.rs  clipboard.rs  console.rs  editor.rs  ehci_usb.rs  exception_vector.s  file_explorer.rs  filesystem.rs  framebuffer.rs  html_parser.rs  interrupts.rs  memory.rs  mod.rs  network.rs  pci.rs  ps2_keyboard.rs  rtc.rs  scheduler.rs  shell.rs  snake.rs  syscall.rs  tcp.rs  text_input.rs  thread.rs  usb_hid.rs  usb_old.rs  userspace_test.rs  virtio_blk.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  window_manager.rs
src/kernel/drivers/: input_events.rs  mod.rs  timer.rs
src/kernel/drivers/virtio/: gpu.rs  input.rs  net.rs
src/system/fs/: filesystem.rs  mod.rs
src/system/net/: dns.rs  helpers.rs  mod.rs  network.rs  smoltcp_device.rs  stack.rs  tcp.rs
userspace/csv_viewer/: Cargo.toml  main.rs
userspace/file_server/: Cargo.toml
userspace/file_server/src/: main.rs
userspace/image_viewer/: Cargo.toml  main.rs
userspace/ipc_receiver/: Cargo.toml  main.rs
userspace/ipc_sender/: Cargo.toml  main.rs
userspace/shell/: Cargo.toml  main.rs
userspace/terminal/: Cargo.toml
userspace/terminal/src/: main.rs
userspace/window_manager/: Cargo.toml  main.rs
