[workspace]
resolver = "2"
members = [
    "kernel",
    "librost",
    "image_codecs",
    "userspace/shell",
    "userspace/image_viewer",
    "userspace/ipc_sender",
    "userspace/ipc_receiver",
    "userspace/csv_viewer",
    "userspace/window_manager",
]

# Shared profile settings for all workspace members
[profile.release]
opt-level = 2
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
