[workspace]
resolver = "2"
members = [
    "kernel",
    "librost",
    "image_codecs",
    "userspace/terminal",
    "userspace/image_viewer",
    "userspace/csv_viewer",
    "userspace/window_manager",
    "userspace/file_server",
]

# Shared profile settings for all workspace members
[profile.release]
opt-level = 2
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
