[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uefi_boot"
path = "src/uefi_boot.rs"

[dependencies]
librost = { path = "../librost", features = ["image-codecs"] }
image_codecs = { path = "../image_codecs" }
rlsf = "0.2.1"
smoltcp = { version = "0.12", default-features = false, features = ["proto-ipv4", "proto-ipv6", "proto-dhcpv4", "proto-dns", "socket-tcp", "socket-udp", "socket-icmp", "socket-raw", "socket-dhcpv4", "socket-dns", "async", "medium-ethernet", "alloc"] }
fontdue = { version = "0.9.3", default-features = false, features = ["hashbrown"] }
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }
aarch64-cpu = "11.1"
bitflags = { version = "2.10", default-features = false }
csv-core = { version = "0.1", default-features = false }
goblin = { version = "0.10", default-features = false, features = ["elf32", "elf64", "endian_fd", "alloc"] }
