[package]
name = "csv_viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv_viewer"
path = "main.rs"

[dependencies]
librost = { path = "../../librost" }
csv-core = { version = "0.1", default-features = false }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size
