[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file_server"
path = "src/main.rs"

[dependencies]
librost = { path = "../../librost" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Remove debug symbols
